--- a/index_dropdown.html
+++ b/index_dropdown.html
@@ -2,22 +2,80 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Record Mood</title>
+    <title>Record Mood and Journal Entry</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        label {
+            font-weight: bold;
+        }
+        select, textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            resize: none;
+        }
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        a {
+            display: block;
+            text-align: center;
+            margin-top: 20px;
+            color: #007bff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Record Your Mood</h1>
-    <form action="/" method="POST">
-        <label for="mood">How are you feeling?</label>
-        <select id="mood" name="mood" required>
-            <option value="Happy">Happy</option>
-            <option value="Sad">Sad</option>
-            <option value="Excited">Excited</option>
-            <option value="Calm">Calm</option>
-            <option value="Angry">Angry</option>
-            <option value="Stressed">Stressed</option>
-        </select>
-        <button type="submit">Record</button>
-    </form>
-    <a href="/visualization">Visualize Your Mood Over Time</a>
+    <div class="container">
+        <h1>Record Your Mood and Journal Entry</h1>
+        <form action="/" method="POST">
+            <label for="mood">How are you feeling?</label>
+            <select id="mood" name="mood" required>
+                <option value="Happy">Happy</option>
+                <option value="Sad">Sad</option>
+                <option value="Excited">Excited</option>
+                <option value="Calm">Calm</option>
+                <option value="Angry">Angry</option>
+                <option value="Stressed">Stressed</option>
+            </select>
+            <br><br>
+            <label for="journal_entry">Journal Entry:</label><br>
+            <textarea id="journal_entry" name="journal_entry" rows="4" cols="50" required></textarea>
+            <br><br>
+            <button type="submit">Record</button>
+        </form>
+        <a href="/visualization">Visualize Your Mood Over Time</a>
+    </div>
 </body>
 </html>
